Thu Nov 18 12:54:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidldefaults.mpb:
        * TAO_IDL/be/be_produce.cpp:
        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
        * TAO_IDL/be/be_visitor_dds_ts_idl.cpp:
          With -Gts only generate TypeSupport.idl and than bail out

Thu Nov 18 07:41:38 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exs.cpp:
          Swapped the template arguments.

Wed Nov 17 17:39:41 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_dds_ts_idl.cpp:
        * TAO_IDL/be_include/be_visitor_dds_ts_idl.h:

          Changed code generation to create one output file
          per IDL file processed. For Foo.idl, the generated
          file is called FooTypeSupport.idl.

Wed Nov 17 17:07:20 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/facet_svh.cpp:
        * TAO_IDL/be_include/be_interface.h:

          Cosmetic changes, comment typo fixed.

        * TAO_IDL/be/be_provides.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/be_include/be_global.h:

          Added checks to prevent AMI implied IDL sendc_*
          operations from being generated in a facet servant,
          in cases where we are using CORBA AMI on the
          facet interface.

Wed Nov 17 15:07:20 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be_include/be_visitor_dds_ts_idl.h:
        * TAO_IDL/be/be_visitor_dds_ts_idl.cpp:

          New files, defining a new visitor that generates DDS
          type support classes, triggered by the option -Gts.
          At present, only the data writer and data reader
          classes are generated, and no check is made that